Fix overlapping links in timeline

--- a/app/assets/stylesheets/linkser.css.scss
+++ b/app/assets/stylesheets/linkser.css.scss
@@ -53,7 +53,6 @@
   text-overflow: ellipsis;
   overflow:hidden;  /* this is what makes the name link doesn't work - solved*/
   white-space: nowrap;
-  position: absolute;
   width: 170px;
   height: 120px; 
 
